load(
    "@com_google_sandboxed_api//sandboxed_api/bazel:sapi.bzl",
    "sapi_library",
)

sapi_library(
    name = "rot13_sapi",
    functions = [
        "Rot13File",
    ],
    input_files = ["rot13.cc"],
    lib = ":rot13",
    lib_name = "Rot13",
)

cc_binary(
    name = "rot13_sandboxed",
    srcs = ["main_sandboxed.cc"],
    deps = [
        ":rot13_sapi",
        "@com_google_absl//absl/base:log_severity",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/log:globals",
        "@com_google_absl//absl/log:initialize",
    ],
)

cc_library(
    name = "rot13",
    srcs = ["rot13.cc"],
    hdrs = ["rot13.h"],
)

cc_binary(
    name = "rot13_main",
    srcs = ["main.cc"],
    deps = [":rot13"],
)
